--- a/css/styles.css
+++ b/css/styles.css
@@ -10994,7 +10994,7 @@ body {
 }
 #mainNav .navbar-brand {
   color: #000;
-  font-weight: 700;
+  font-weight: 600;
   padding: 0.9rem 0;
 }
 #mainNav .navbar-nav .nav-item:hover {
@@ -11047,6 +11047,80 @@ body {
     color: #ffaa00;
   }
   #mainNav.navbar-shrink .nav-link.active {
+    color: #ffaa00;
+    outline: none;
+    border-bottom: 0.25rem solid #ffaa00;
+  }
+}
+
+#mainNav-shrink {
+  min-height: 3.5rem;
+  background-color: #fff;
+}
+#mainNav-shrink .navbar-toggler {
+  font-size: 80%;
+  padding: 0.75rem;
+  color: #ffaa00;
+  border: 1px solid #ffaa00;
+}
+#mainNav-shrink .navbar-toggler:focus {
+  outline: none;
+}
+#mainNav-shrink .navbar-brand {
+  color: #000;
+  font-weight: 700;
+  padding: 0.9rem 0;
+}
+#mainNav-shrink .navbar-nav .nav-item:hover {
+  color: fade(#fff, 80%);
+  outline: none;
+  background-color: transparent;
+}
+#mainNav-shrink .navbar-nav .nav-item:active, #mainNav-shrink .navbar-nav .nav-item:focus {
+  outline: none;
+  background-color: transparent;
+}
+@media (min-width: 992px) {
+  #mainNav-shrink {
+    padding-top: 0;
+    padding-bottom: 0;
+    border-bottom: none;
+    background-color: transparent;
+    transition: background-color 0.3s ease-in-out;
+  }
+  #mainNav-shrink .navbar-brand {
+    padding: 0.5rem 0;
+    color: rgba(255, 255, 255, 0.5);
+  }
+  #mainNav-shrink .nav-link {
+    transition: none;
+    padding: 2rem 1.5rem;
+    color: rgba(255, 255, 255, 0.5);
+  }
+  #mainNav-shrink .nav-link:hover {
+    color: rgba(255, 255, 255, 0.75);
+  }
+  #mainNav-shrink .nav-link:active {
+    color: #fff;
+  }
+  #mainNav-shrink.navbar-shrink {
+    background-color: #fff;
+  }
+  #mainNav-shrink.navbar-shrink .navbar-brand {
+    color: #000;
+  }
+  #mainNav-shrink.navbar-shrink .nav-link {
+    color: #000;
+    padding: 1.5rem 1.5rem 1.25rem;
+    border-bottom: 0.25rem solid transparent;
+  }
+  #mainNav-shrink.navbar-shrink .nav-link:hover {
+    color: #ffaa00;
+  }
+  #mainNav-shrink.navbar-shrink .nav-link:active {
+    color: #ffaa00;
+  }
+  #mainNav-shrink.navbar-shrink .nav-link.active {
     color: #ffaa00;
     outline: none;
     border-bottom: 0.25rem solid #ffaa00;
