--- a/css/styles.css
+++ b/css/styles.css
@@ -8315,6 +8315,7 @@ textarea.form-control-lg {
 .bg-black {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-black-rgb), var(--bs-bg-opacity)) !important;
+  background-color: rgba(var(--bs-black-rgb), 0.8) !important;
 }
 
 .bg-white {
